Fix overflowing corners. Delete unneeded styling

--- a/style.css
+++ b/style.css
@@ -9,21 +9,14 @@ h1 {
     text-align: center;
 }
 
-p {
-    color: #555;
-}
-
 .list {
   display: flex;  
   align-items: center;
-  justify-content: space-around;
   flex-flow: row wrap;
-  gap: 2em;
+  gap: 5em;
 }
 
 .card-title, .card-body {
-  display: flex;
-  flex-flow: column wrap;
   flex: 1;
 }
 
@@ -41,17 +34,16 @@ p {
 }
 
 .card {
-    max-width: min(30rem, 100%);
     background-color: White;
-    border: 1px solid #aaa;
+    border: 1px solid #ccc;
     color: #444;
-    border-radius: 8px;
+    border-radius: 10%;
+    overflow: hidden;
 }
 
 li {
   margin: 0;
   padding: 0;
-  list-style-type: none;
 }
 
 .container {
